--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
             <div class="list-none flex flex-col md:flex-row gap-4 md:gap-6">
                 <a href="https://forms.gle/ou44YbuYCPwt9wMB7" target="__blank" class="">
                     <button
-                        class="bg-secondary text-primary font-medium w-full px-10 py-2 shadow-md rounded-lg hover:underline underline-offset-4 hover:scale-105 transition-all">Buy
-                        Soohaalee</button>
+                        class="bg-secondary text-primary font-medium w-full px-14 py-2 shadow-md rounded-lg hover:underline underline-offset-4 hover:scale-105 transition-all">Buy</button>
                 </a>
-                <a href="https://forms.gle/ou44YbuYCPwt9wMB7" target="__blank" class="">
+                <a href="https://forms.gle/8xiZ17xUmLmfoHJf7" target="__blank" class="">
                     <button
-                        class="bg-secondary text-primary font-medium w-full px-10 py-2 shadow-md rounded-lg hover:underline underline-offset-4 hover:scale-105 transition-all">Buy
-                        Masala</button>
+                        class="bg-secondary text-primary font-medium w-full px-10 py-2 shadow-md rounded-lg hover:underline underline-offset-4 hover:scale-105 transition-all">Get
+                        A Job</button>
                 </a>
             </div>
         </aside>
